add API /device?inventoryID={ID} to meet device inventory system's REQ
