# lib/db/api.js
@@ -443,6 +443,10 @@ dbapi.loadDevice = function(serial) {
   return db.run(r.table('devices').get(serial))
 }
 
+dbapi.loadDeviceByInventoryID = function (id) {
+  return db.run(r.table('devices').filter({'inventoryID':id}))
+}
+
 dbapi.saveUserAccessToken = function(email, token) {
   return db.run(r.table('accessTokens').insert({
     email: email
