# lib/units/api/controllers/devices.js
@@ -101,3 +101,37 @@ function getDeviceBySerial(req, res) {
       })
     })
 }
+
+function getDeviceByInventoryID(req, res) {
+  var inventoryID = req.swagger.params.inventoryID.value
+  var fields = req.swagger.params.fields.value
+
+  inventoryID = inventoryID.replace(/\s+/g, '')
+  dbapi.loadDeviceByInventoryID(inventoryID)
+    .then(function(device) {
+      if (!device) {
+        return res.status(404).json({
+          success: false
+          , description: 'Device not found'
+        })
+      }
+
+      datautil.normalize(device, req.user)
+      var responseDevice = device
+
+      if (fields) {
+        responseDevice = _.pick(device, fields.split(','))
+      }
+
+      res.json({
+        success: true
+        , device: responseDevice
+      })
+    })
+    .catch(function(err) {
+      log.error('Failed to load device "%s": ', req.params.serial, err.stack)
+      res.status(500).json({
+        success: false
+      })
+    })
+}
